[package]
name = "analyzeme"
description = "Provides common functionality for measureme tools"
version = "9.2.1"
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/measureme"

[dependencies]
byteorder = "1.2.7"
memchr = "2"
measureme = { version = "9.2.1", path = "../measureme" }
rustc-hash = "1.0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
