[package]
name = "analyzeme"
description = "Provides common functionality for measureme tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
decodeme.workspace = true
log.workspace = true
measureme.workspace = true
memchr.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true

[dev-dependencies]
flate2.workspace = true
